--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
@@ -46,6 +49,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.0",
+    "@types/react-redux": "^7.1.15",
     "@types/react-router-dom": "^5.1.7"
   }
 }
